snapshot v1.0.1 - fixed text errors, made accessibility (first level)

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 			<!-- page header -->
 			<header class="page-header">
 				<div class="page-header__container container">
-					<a href="#!" class="page-header__cat uppercase">кот шредингера</a>
+					<a href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D1%82_%D0%A8%D1%80%D1%91%D0%B4%D0%B8%D0%BD%D0%B3%D0%B5%D1%80%D0%B0"
+						class="page-header__cat uppercase target">кот шредингера</a>
 
 					<img class="page-header__logo" src="./img/site-logo.svg" alt="логотип сайта">
 
@@ -34,7 +35,7 @@
 								<li><a href="#page-physics-expert-opinion-title" class="menu__link uppercase">мнение
 										эксперта</a></li>
 								<li><a href="#page-output-title" class="menu__link uppercase">вывод</a></li>
-								<li><a href="#!" class="menu__link uppercase">материалы</a></li>
+								<li><a href="./materials.html" class="menu__link uppercase">материалы</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -120,20 +121,17 @@
 									stroke="#222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
 							</svg>
 
-							<div class="page-physics__comparison-item">
+							<article class="page-physics__comparison-item">
 								<h3 class="page-physics__comparison-item-title title uppercase">1. что лучше</h3>
-								<p class="page-physics__comparison-item-sub-title sub-title">Хорошо и то, и другое, но квантовая
-									физика
-									точнее, сложнее и непонятней. Мы можем сравнить эти виды на опыте.</p>
-								<p class="page-physics__comparison-item-sub-title sub-title">Представим, что у нас есть пушка
-									стреляющая
-									электронами, и нам нужно измерить скорость вылетевшего электрона. чтобы это сделать, нужно
-									сфотографировать его через долю секунды после вылета. Так мы узнаем где он оказался, <span
-										class="sub-tile-medium">поделим
-										пройденный путь на время, и вычислим скорость</span>. И кажется всё, мы нашли скорость. И
-									если бы мы
-									пользовались классической физикой, то были бы правы.</p>
-							</div>
+								<p class="page-physics__comparison-item-sub-title sub-title">Хорошо и то, и другое. Но квантовая
+									физика точнее, сложнее и непонятнее. Мы можем сравнить эти виды на опыте.</p>
+								<p class="page-physics__comparison-item-sub-title sub-title">Представим, что у нас есть пушка,
+									стреляющая электронами, и нам нужно измерить скорость вылетевшего электрона. Чтобы это
+									сделать, нужно сфотографировать его через долю секунды после вылета. Так мы узнаем, где он
+									оказался. <span class="sub-tile-medium">Поделим пройденный путь на время, и вычислим
+										скорость</span>. И, кажется, всё... мы нашли скорость... И, если бы мы пользовались
+									классической физикой, то были бы правы.</p>
+							</article>
 						</div>
 
 						<div class="page-physics__comparison-block">
@@ -147,21 +145,18 @@
 									stroke="#222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
 							</svg>
 
-							<div class="page-physics__comparison-item">
+							<article class="page-physics__comparison-item">
 								<h3 class="page-physics__comparison-item-title title uppercase">2. что не так?</h3>
 								<p class="page-physics__comparison-item-sub-title sub-title">Теперь электрон может лететь
-									совершенно <span class="sub-tile-medium">с другой скоростью</span>. фотографируя, мы его
-									осветили, и
-									фотон отразившись, мог вполне
-									изменить скорость электрона. Так что после измерения, как это ни странно, <span
-										class="sub-tile-medium">мы не знаем точно
-										текущей скорости</span> электрона, только приблизительно.</p>
+									совершенно <span class="sub-tile-medium">с другой скоростью</span>. Фотографируя, мы его
+									осветили, и фотон, отразившись, мог вполне изменить скорость электрона. Так что после
+									измерения, как это ни странно, <span class="sub-tile-medium">мы не знаем точно текущей
+										скорости</span> электрона, только приблизительно.</p>
 								<p class="page-physics__comparison-item-sub-title sub-title">Всё это следствие фундаментального
 									соображения квантовой физики - <span class="sub-tile-medium">принципа
-										неопределённости</span>.
-									Он гласит, что невозможно предельно
-									точно измерить 2 связанные величины.</p>
-							</div>
+										неопределённости</span>. Он гласит, что невозможно предельно точно измерить 2 связанные
+									величины.</p>
+							</article>
 						</div>
 					</div>
 				</div>
@@ -208,12 +203,9 @@
 				<div class="page-output__container container">
 					<h2 class="title uppercase" id="page-output-title">вывод</h2>
 					<p class="page-output__sub-title sub-title"><span class="sub-tile-medium">Важно всё</span>. Нужно
-						учитывать
-						где именно использовать
-						тот или иной вид физики. Например
-						при небольших и не критичных вычислениях лучше использовать <span class="sub-tile-medium">классичеcкую
-							физику</span>, а вот при вычислениях
-						важных и сложных расчётов - <span class="sub-tile-medium">квантовую</span>.</p>
+						учитывать, где именно использовать тот или иной вид физики. Например, при небольших и не критичных
+						вычислениях лучше использовать <span class="sub-tile-medium">классичеcкую физику</span>, а вот при
+						вычислениях важных и сложных расчётов - <span class="sub-tile-medium">квантовую</span>.</p>
 				</div>
 			</section>
 		</main>
@@ -224,32 +216,32 @@
 				<div class="page-footer__top">
 					<ul class="page-footer__list uppercase">
 						<li class="page-footer__item">
-							<h5 class="page-footer__title">название конкурса</h5>
+							<p class="page-footer__title">название конкурса</p>
 							<p class="page-footer__sub-title">сделай сайт своими руками</p>
 						</li>
 
 						<li class="page-footer__item">
-							<h5 class="page-footer__title">название учреждения</h5>
+							<p class="page-footer__title">название учреждения</p>
 							<p class="page-footer__sub-title">маоу до «цдтт»</p>
 						</li>
 
 						<li class="page-footer__item">
-							<h5 class="page-footer__title">преподаватель</h5>
+							<p class="page-footer__title">преподаватель</p>
 							<p class="page-footer__sub-title">ерофеева елена валентиновна</p>
 						</li>
 
 						<li class="page-footer__item">
-							<h5 class="page-footer__title">название проекта</h5>
+							<p class="page-footer__title">название проекта</p>
 							<p class="page-footer__sub-title">clatum</p>
 						</li>
 
 						<li class="page-footer__item">
-							<h5 class="page-footer__title">дата разработки</h5>
+							<p class="page-footer__title">дата разработки</p>
 							<p class="page-footer__sub-title">26.10.2021 - 05.11.2021</p>
 						</li>
 
 						<li class="page-footer__item">
-							<h5 class="page-footer__title">автор</h5>
+							<p class="page-footer__title">автор</p>
 							<p class="page-footer__sub-title">рузаев дмитрий романович</p>
 						</li>
 					</ul>
@@ -257,7 +249,7 @@
 
 				<div class="page-footer__bottom">
 					<div class="page-footer__icons">
-						<a href="https://vk.com/alcesthub" class="page-footer__link-svg">
+						<a href="https://vk.com/alcesthub" class="page-footer__link-svg target" aria-label="vkontakte">
 							<svg class="page-footer__icon" width="48" height="48" viewBox="0 0 48 48" fill="none"
 								xmlns="http://www.w3.org/2000/svg">
 								<path fill-rule="evenodd" clip-rule="evenodd"
@@ -266,7 +258,7 @@
 							</svg>
 						</a>
 
-						<a href="https://t.me/AlcestHub" class="page-footer__link-svg">
+						<a href="https://t.me/AlcestHub" class="page-footer__link-svg target" aria-label="telegram">
 							<svg class="page-footer__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
 								<path fill="#fff"
 									d="M248 8C111 8 0 119 0 256S111 504 248 504 496 392.1 496 256 384.1 8 248 8zM362.1 176.7c-3.732 39.22-19.88 134.4-28.1 178.3-3.476 18.58-10.32 24.82-16.95 25.42-14.4 1.326-25.34-9.517-39.29-18.66-21.83-14.31-34.16-23.22-55.35-37.18-24.49-16.14-8.612-25 5.342-39.5 3.652-3.793 67.11-61.51 68.33-66.75 .153-.655 .3-3.1-1.154-4.384s-3.59-.849-5.135-.5q-3.283 .746-104.6 69.14-14.85 10.19-26.89 9.934c-8.855-.191-25.89-5.006-38.55-9.123-15.53-5.048-27.88-7.717-26.8-16.29q.84-6.7 18.45-13.7 108.4-47.25 144.6-62.3c68.87-28.65 83.18-33.62 92.51-33.79 2.052-.034 6.639 .474 9.61 2.885a10.45 10.45 0 0 1 3.53 6.716A43.76 43.76 0 0 1 362.1 176.7z">
@@ -274,7 +266,7 @@
 							</svg>
 						</a>
 
-						<a href="https://github.com/AlcestHub" class="page-footer__link-svg">
+						<a href="https://github.com/AlcestHub" class="page-footer__link-svg target" aria-label="github">
 							<svg class="page-footer__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
 								<path fill="#fff"
 									d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z">
