snapshot v1.0.2 - add image optimization

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 				<div class="page-main-block__btn-wrap">
 					<span class="page-main-block__sponsor uppercase">frintest production</span>
 
-					<a class="page-main-block__btn" href="#page-physics-title">
-						<svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<path d="M0 0H33V33H0V0Z" fill="none" />
-							<path class="page-main-block__svg" d="M16.5 33L2.21058 8.25L30.7894 8.25L16.5 33Z" fill="#222" />
+					<a class="page-main-block__btn" href="#page-physics-title" aria-label="кнопка вниз">
+						<svg width="33" height="33" fill="none">
+							<path d="M0 0h33v33H0V0Z" />
+							<path class="page-main-block__svg" d="M16.5 33 2.2 8.2h28.6L16.5 33Z" fill="#222" />
 						</svg>
 					</a>
 				</div>
@@ -81,10 +81,9 @@
 
 							<div class="page-physics__video" data-id="classic">
 								<div class="page-physics__btn">
-									<svg class="page-physics__svg" width="33" height="33" viewBox="0 0 33 33" fill="none"
-										xmlns="http://www.w3.org/2000/svg">
-										<path d="M0 0H33V33H0V0Z" fill="none" />
-										<path d="M33 16.5L8.25 30.7894L8.25 2.21058L33 16.5Z" fill="#fff" />
+									<svg class="page-physics__svg" width="33" height="33" fill="none">
+										<path d="M0 0h33v33H0V0Z" />
+										<path d="M33 16.5 8.2 30.8V2.2L33 16.5Z" fill="#fff" />
 									</svg>
 								</div>
 							</div>
@@ -102,10 +101,9 @@
 
 							<div class="page-physics__video" data-id="quantum">
 								<div class="page-physics__btn">
-									<svg class="page-physics__svg" width="33" height="33" viewBox="0 0 33 33" fill="none"
-										xmlns="http://www.w3.org/2000/svg">
-										<path d="M0 0H33V33H0V0Z" fill="none" />
-										<path d="M33 16.5L8.25 30.7894L8.25 2.21058L33 16.5Z" fill="#fff" />
+									<svg class="page-physics__svg" width="33" height="33" fill="none">
+										<path d="M0 0h33v33H0V0Z" />
+										<path d="M33 16.5 8.2 30.8V2.2L33 16.5Z" fill="#fff" />
 									</svg>
 								</div>
 							</div>
@@ -114,10 +112,9 @@
 
 					<div class="page-physics__comparison">
 						<div class="page-physics__comparison-block">
-							<svg class="page-physics__comparison-svg" width="256" height="164" viewBox="0 0 256 164"
-								fill="none" xmlns="http://www.w3.org/2000/svg">
+							<svg class="page-physics__comparison-svg" width="256" height="164" fill="none">
 								<path
-									d="M69.25 44.5V119.5M106.75 44.5V119.5M50.5 82H125.5M50.5 63.25H69.25M50.5 100.75H69.25M106.75 100.75H125.5M106.75 63.25H125.5M254.5 24.5L174 82L254.5 139.5V24.5ZM24.5 1.5H151C163.703 1.5 174 11.7975 174 24.5V139.5C174 152.203 163.703 162.5 151 162.5H24.5C11.7975 162.5 1.5 152.203 1.5 139.5V24.5C1.5 11.7975 11.7975 1.5 24.5 1.5ZM58.675 44.5H117.325C121.84 44.5 125.5 48.16 125.5 52.675V111.325C125.5 115.84 121.84 119.5 117.325 119.5H58.675C54.16 119.5 50.5 115.84 50.5 111.325V52.675C50.5 48.16 54.16 44.5 58.675 44.5Z"
+									d="M69.3 44.5v75m37.5-75v75M50.5 82h75m-75-18.8h18.8m-18.8 37.5h18.8m37.5 0h18.7m-18.8-37.5h18.8m129-38.7L174 82l80.5 57.5v-115Zm-230-23H151a23 23 0 0 1 23 23v115a23 23 0 0 1-23 23H24.5a23 23 0 0 1-23-23v-115a23 23 0 0 1 23-23Zm34.2 43h58.6c4.5 0 8.2 3.7 8.2 8.2v58.6c0 4.5-3.7 8.2-8.2 8.2H58.7a8.2 8.2 0 0 1-8.2-8.2V52.7c0-4.5 3.7-8.2 8.2-8.2Z"
 									stroke="#222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
 							</svg>
 
@@ -135,14 +132,11 @@
 						</div>
 
 						<div class="page-physics__comparison-block">
-							<svg class="page-physics__comparison-svg" width="245" height="179" viewBox="0 0 245 179"
-								fill="none" xmlns="http://www.w3.org/2000/svg">
-								<path
-									d="M1.04175 89.5001C1.04175 89.5001 45.2084 1.16675 122.5 1.16675C199.792 1.16675 243.958 89.5001 243.958 89.5001C243.958 89.5001 199.792 177.833 122.5 177.833C45.2084 177.833 1.04175 89.5001 1.04175 89.5001Z"
+							<svg class="page-physics__comparison-svg" width="245" height="179" fill="none">
+								<path d="M1 89.5S45.2 1.2 122.5 1.2 244 89.5 244 89.5s-44.2 88.3-121.5 88.3S1 89.5 1 89.5Z"
 									stroke="#222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-								<path
-									d="M122.5 122.625C140.794 122.625 155.625 107.794 155.625 89.5C155.625 71.2056 140.794 56.375 122.5 56.375C104.206 56.375 89.375 71.2056 89.375 89.5C89.375 107.794 104.206 122.625 122.5 122.625Z"
-									stroke="#222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+								<path d="M122.5 122.6a33.1 33.1 0 1 0 0-66.2 33.1 33.1 0 0 0 0 66.2Z" stroke="#222"
+									stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
 							</svg>
 
 							<article class="page-physics__comparison-item">
@@ -180,16 +174,13 @@
 
 					<div class="page-expert-opinion__player">
 						<div class="page-expert-opinion__btn">
-							<svg class="page-expert-opinion__play" width="33" height="33" viewBox="0 0 33 33" fill="none"
-								xmlns="http://www.w3.org/2000/svg">
-								<path d="M0 0H33V33H0V0Z" fill="none" />
-								<path d="M33 16.5L8.25 30.7894L8.25 2.21058L33 16.5Z" fill="#222" />
+							<svg class="page-expert-opinion__play" width="33" height="33" fill="none">
+								<path d="M0 0h33v33H0V0Z" />
+								<path d="M33 16.5 8.2 30.8V2.2L33 16.5Z" fill="#222" />
 							</svg>
 
-							<svg class="page-expert-opinion__pause" width="21" height="25" viewBox="0 0 21 25" fill="none"
-								xmlns="http://www.w3.org/2000/svg">
-								<path d="M16 0H21V25H16V0Z" fill="#222" />
-								<path d="M0 0H5V25H0V0Z" fill="#222" />
+							<svg class="page-expert-opinion__pause" width="21" height="25" fill="none">
+								<path d="M16 0h5v25h-5V0ZM0 0h5v25H0V0Z" fill="#222" />
 							</svg>
 						</div>
 
@@ -250,8 +241,7 @@
 				<div class="page-footer__bottom">
 					<div class="page-footer__icons">
 						<a href="https://vk.com/alcesthub" class="page-footer__link-svg target" aria-label="vkontakte">
-							<svg class="page-footer__icon" width="48" height="48" viewBox="0 0 48 48" fill="none"
-								xmlns="http://www.w3.org/2000/svg">
+							<svg class="page-footer__icon" width="48" height="48" viewBox="0 0 48 48" fill="none">
 								<path fill-rule="evenodd" clip-rule="evenodd"
 									d="M3.37413 3.37413C0 6.74826 0 12.1788 0 23.04V24.96C0 35.8212 0 41.2517 3.37413 44.6259C6.74826 48 12.1788 48 23.04 48H24.96C35.8212 48 41.2517 48 44.6259 44.6259C48 41.2517 48 35.8212 48 24.96V23.04C48 12.1788 48 6.74826 44.6259 3.37413C41.2517 0 35.8212 0 24.96 0H23.04C12.1788 0 6.74826 0 3.37413 3.37413ZM8.10012 14.6001C8.36012 27.0801 14.6001 34.5801 25.5401 34.5801H26.1602V27.4401C30.1802 27.8401 33.22 30.7801 34.44 34.5801H40.1201C38.5601 28.9001 34.4599 25.7601 31.8999 24.5601C34.4599 23.0801 38.0599 19.4801 38.9199 14.6001H33.7598C32.6398 18.5601 29.3202 22.1601 26.1602 22.5001V14.6001H21V28.4401C17.8 27.6401 13.7601 23.7601 13.5801 14.6001H8.10012Z"
 									fill="#fff" />
@@ -259,18 +249,16 @@
 						</a>
 
 						<a href="https://t.me/AlcestHub" class="page-footer__link-svg target" aria-label="telegram">
-							<svg class="page-footer__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
+							<svg class="page-footer__icon" viewBox="0 0 496 512">
 								<path fill="#fff"
-									d="M248 8C111 8 0 119 0 256S111 504 248 504 496 392.1 496 256 384.1 8 248 8zM362.1 176.7c-3.732 39.22-19.88 134.4-28.1 178.3-3.476 18.58-10.32 24.82-16.95 25.42-14.4 1.326-25.34-9.517-39.29-18.66-21.83-14.31-34.16-23.22-55.35-37.18-24.49-16.14-8.612-25 5.342-39.5 3.652-3.793 67.11-61.51 68.33-66.75 .153-.655 .3-3.1-1.154-4.384s-3.59-.849-5.135-.5q-3.283 .746-104.6 69.14-14.85 10.19-26.89 9.934c-8.855-.191-25.89-5.006-38.55-9.123-15.53-5.048-27.88-7.717-26.8-16.29q.84-6.7 18.45-13.7 108.4-47.25 144.6-62.3c68.87-28.65 83.18-33.62 92.51-33.79 2.052-.034 6.639 .474 9.61 2.885a10.45 10.45 0 0 1 3.53 6.716A43.76 43.76 0 0 1 362.1 176.7z">
-								</path>
+									d="M248 8a248 248 0 1 0 248 248C496 119.9 384.1 8 248 8zm114.1 168.7c-3.7 39.2-19.9 134.4-28.1 178.3-3.5 18.6-10.3 24.8-17 25.4-14.3 1.3-25.3-9.5-39.2-18.6-21.9-14.4-34.2-23.3-55.4-37.2-24.5-16.2-8.6-25 5.4-39.5 3.6-3.8 67-61.5 68.3-66.8.1-.6.3-3-1.2-4.4s-3.6-.8-5.1-.5q-3.3.8-104.6 69.2-14.9 10.2-26.9 10c-8.9-.3-25.9-5-38.5-9.2-15.6-5-28-7.7-26.8-16.3q.8-6.7 18.4-13.7 108.4-47.2 144.6-62.3c68.9-28.6 83.2-33.6 92.5-33.8 2 0 6.7.5 9.6 2.9a10.4 10.4 0 0 1 3.6 6.7 43.8 43.8 0 0 1 .4 9.8z" />
 							</svg>
 						</a>
 
 						<a href="https://github.com/AlcestHub" class="page-footer__link-svg target" aria-label="github">
-							<svg class="page-footer__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
+							<svg class="page-footer__icon" viewBox="0 0 496 512">
 								<path fill="#fff"
-									d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z">
-								</path>
+									d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252a250.7 250.7 0 0 0 169.5 239.2c12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9a94.5 94.5 0 0 1 2.6-67.9c20.9-6.5 69 27 69 27a235 235 0 0 1 125.6 0s48.1-33.6 69-27a94.4 94.4 0 0 1 2.6 67.9c16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z" />
 							</svg>
 						</a>
 					</div>
