--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 				</div>
 
 				<div class="page-physics__video-player-wrap">
-					<video data-id="classic" src="" width="1000" controls></video>
-					<video data-id="quantum" src="./video/quantum.mp4" width="1000" controls></video>
+					<video data-id="classic" src="./video/quantum.mp4" controls muted></video>
+					<video data-id="quantum" src="./video/quantum.mp4" controls muted></video>
 
 					<div class="player__btn-icon">
 						<span></span>
@@ -164,7 +164,7 @@
 
 					<p class="page-expert-opinion__sub-title sub-title">Дмитрий Побединский</p>
 
-					<div class="page-expert-opinion__player">
+					<div class="page-expert-opinion__player">3
 						<label class="page-expert-opinion__btn" for="volume-track">
 							<svg class="page-expert-opinion__play" width="33" height="33" fill="none">
 								<path d="M0 0h33v33H0V0Z" />
@@ -233,7 +233,7 @@
 
 				<div class="page-footer__bottom">
 					<div class="page-footer__icons">
-						<a href="https://vk.com/alcesthub" class="page-footer__link-svg target" aria-label="vkontakte"
+						<a href="https://vk.com/frintest" class="page-footer__link-svg target" aria-label="vkontakte"
 							rel="noopener">
 							<svg class="page-footer__icon" width="48" height="48" viewBox="0 0 48 48" fill="none">
 								<path fill-rule="evenodd" clip-rule="evenodd"
@@ -242,7 +242,7 @@
 							</svg>
 						</a>
 
-						<a href="https://t.me/AlcestHub" class="page-footer__link-svg target" aria-label="telegram"
+						<a href="https://t.me/frintest" class="page-footer__link-svg target" aria-label="telegram"
 							rel="noopener">
 							<svg class="page-footer__icon" viewBox="0 0 496 512">
 								<path fill="#fff"
