--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
 
 					<p class="page-expert-opinion__sub-title sub-title">Дмитрий Побединский</p>
 
-					<div class="page-expert-opinion__player">3
-						<label class="page-expert-opinion__btn" for="volume-track">
+					<div class="page-expert-opinion__player">
+						<label class="page-expert-opinion__btn">
 							<svg class="page-expert-opinion__play" width="33" height="33" fill="none">
 								<path d="M0 0h33v33H0V0Z" />
 								<path d="M33 16.5 8.2 30.8V2.2L33 16.5Z" fill="#222" />
@@ -176,6 +176,7 @@
 							</svg>
 						</label>
 
+						<label for="volume-track">333</label>
 						<input class="page-expert-opinion__volume-track" id="volume-track" type="range" min="0" max="100"
 							step="1" value="50">
 					</div>
