--- a/index.html
+++ b/index.html
@@ -176,9 +176,10 @@
 							</svg>
 						</label>
 
-						<label for="volume-track">333</label>
-						<input class="page-expert-opinion__volume-track" id="volume-track" type="range" min="0" max="100"
-							step="1" value="50">
+						<label>
+							<input class="page-expert-opinion__volume-track" id="volume-track" type="range" min="0" max="100"
+								step="1" value="50">
+						</label>
 					</div>
 				</div>
 			</section>
