testing Permissions-Policy

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="theme-color" content="#ff490c">
 	<meta name="keywords" content="физика, классическая, квантовая">
 	<meta name="description" content="Сравнение классической и квантовой физики на опыте.">
+	<meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
 	<title>Clatum – классическая физика или квантовая?</title>
 	<link rel="icon" href="./img/favicon.svg" sizes="any" type="image/svg+xml">
 	<link rel="stylesheet" href="./css/reset.css">
@@ -165,7 +166,7 @@
 					<p class="page-expert-opinion__sub-title sub-title">Дмитрий Побединский</p>
 
 					<div class="page-expert-opinion__player">
-						<label class="page-expert-opinion__btn">
+						<div class="page-expert-opinion__btn">
 							<svg class="page-expert-opinion__play" width="33" height="33" fill="none">
 								<path d="M0 0h33v33H0V0Z" />
 								<path d="M33 16.5 8.2 30.8V2.2L33 16.5Z" fill="#222" />
@@ -174,7 +175,7 @@
 							<svg class="page-expert-opinion__pause" width="21" height="25" fill="none">
 								<path d="M16 0h5v25h-5V0ZM0 0h5v25H0V0Z" fill="#222" />
 							</svg>
-						</label>
+						</div>
 
 						<label>
 							<input class="page-expert-opinion__volume-track" id="volume-track" type="range" min="0" max="100"
