--- a/materials.html
+++ b/materials.html
@@ -3,10 +3,16 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="theme-color" content="#ff490c">
+	<meta name="keywords" content="физика, классическая, квантовая">
+	<meta name="description" content="Сравнение классической и квантовой физики на опыте.">
 	<meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 	<title>Clatum – классическая физика или квантовая?</title>
+	<link rel="icon" href="./img/favicon.svg" sizes="any" type="image/svg+xml">
+	<link rel="stylesheet" href="./css/reset.css">
+	<link rel="stylesheet" href="./css/main.css">
+	<link rel="stylesheet" href="./css/media.css">
 </head>
 
 <body>
