--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#ff490c">
 	<meta name="keywords" content="физика, классическая, квантовая">
 	<meta name="description" content="Сравнение классической и квантовой физики на опыте.">
-	<meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 	<title>Clatum – классическая физика или квантовая?</title>
 	<link rel="icon" href="./img/favicon.svg" sizes="any" type="image/svg+xml">
 	<link rel="stylesheet" href="./css/reset.css">
@@ -177,8 +178,8 @@
 						</div>
 
 						<label>
-							<input class="page-expert-opinion__volume-track" id="volume-track" type="range" min="0" max="100"
-								step="1" value="50">
+							<input class="page-expert-opinion__volume-track" id="volume-track" type="range" value="50" min="0"
+								max="100" step="1">
 						</label>
 					</div>
 				</div>
