add classic video

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 				</div>
 
 				<div class="page-physics__video-player-wrap">
-					<video data-id="classic" src="./video/quantum.mp4" controls muted></video>
+					<video data-id="classic" src="./video/classic.mp4" controls muted></video>
 					<video data-id="quantum" src="./video/quantum.mp4" controls muted></video>
 
 					<div class="player__btn-icon">
