--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 								<li><a href="#page-physics-expert-opinion-title" class="menu__link uppercase">мнение
 										эксперта</a></li>
 								<li><a href="#page-output-title" class="menu__link uppercase">вывод</a></li>
-								<li><a href="./materials.html" class="menu__link uppercase">материалы</a></li>
+								<li><a href="./contacts.html" class="menu__link uppercase">контакты</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -149,8 +149,8 @@
 				</div>
 
 				<div class="page-physics__video-player-wrap">
-					<video data-id="classic" src="./video/classic.mp4" controls muted></video>
-					<video data-id="quantum" src="./video/quantum.mp4" controls muted></video>
+					<video data-id="classic" src="/video/classic.mp4" controls muted></video>
+					<video data-id="quantum" src="/video/quantum.mp4" controls muted></video>
 
 					<div class="player__btn-icon">
 						<span></span>
