--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="theme-color" content="#ff490c">
 	<meta name="keywords" content="физика, классическая, квантовая">
 	<meta name="description" content="Сравнение классической и квантовой физики на опыте.">
-	<title>Clatum – классическая физика или квантовая?</title>
+	<title>Clatum: классическая физика или квантовая?</title>
 	<link rel="icon" href="./img/favicon.svg" sizes="any" type="image/svg+xml">
 	<link rel="stylesheet" href="./css/reset.css">
 	<link rel="stylesheet" href="./css/main.css">
@@ -22,10 +22,11 @@
 			<!-- page header -->
 			<header class="page-header">
 				<div class="page-header__container container">
-					<a href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D1%82_%D0%A8%D1%80%D1%91%D0%B4%D0%B8%D0%BD%D0%B3%D0%B5%D1%80%D0%B0"
-						class="page-header__cat uppercase target" rel="noopener">кот шредингера</a>
+					<a href="./contacts.html" class="page-header__link-check uppercase" rel="noopener">контакты</a>
 
-					<img class="page-header__logo" src="./img/site-logo.svg" alt="логотип сайта">
+					<a href="./index.html" class="page-header__logo">
+						<img src="./img/site-logo.svg" alt="логотип сайта">
+					</a>
 
 					<div class="page-header__menu">
 						<div class="page-header__icon">
@@ -35,10 +36,17 @@
 						<nav class="menu__body">
 							<ul class="menu__list">
 								<li><a href="#page-physics-title" class="menu__link uppercase">физика</a></li>
-								<li><a href="#page-physics-expert-opinion-title" class="menu__link uppercase">мнение
-										эксперта</a></li>
+
+								<li>
+									<a href="#page-physics-expert-opinion-title" class="menu__link uppercase">мнение эксперта</a>
+								</li>
+
 								<li><a href="#page-output-title" class="menu__link uppercase">вывод</a></li>
-								<li><a href="./contacts.html" class="menu__link uppercase">контакты</a></li>
+
+								<li>
+									<a href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D1%82_%D0%A8%D1%80%D1%91%D0%B4%D0%B8%D0%BD%D0%B3%D0%B5%D1%80%D0%B0"
+										class="menu__link target uppercase">кот шредингера</a>
+								</li>
 							</ul>
 						</nav>
 					</div>
@@ -149,8 +157,8 @@
 				</div>
 
 				<div class="page-physics__video-player-wrap">
-					<video data-id="classic" src="/video/classic.mp4" controls muted></video>
-					<video data-id="quantum" src="/video/quantum.mp4" controls muted></video>
+					<video data-id="classic" src="./video/classic.mp4" controls muted></video>
+					<video data-id="quantum" src="./video/quantum.mp4" controls muted></video>
 
 					<div class="player__btn-icon">
 						<span></span>
@@ -192,7 +200,7 @@
 					<p class="page-output__sub-title sub-title"><span class="sub-tile-medium">Важно всё</span>. Нужно
 						учитывать, где именно использовать тот или иной вид физики. Например, при небольших и не критичных
 						вычислениях лучше использовать <span class="sub-tile-medium">классичеcкую физику</span>, а вот при
-						вычислениях важных и сложных расчётов - <span class="sub-tile-medium">квантовую</span>.</p>
+						вычислении важных и сложных расчётов - <span class="sub-tile-medium">квантовую</span>.</p>
 				</div>
 			</section>
 		</main>
